<?xml version="1.0"?>
<package>
  <name>rospy_facedetect</name>
  <version>0.1.0</version>
  <description>
  this is face detect
  </description>
  <maintainer email="rookiecj@gmail.com">changju</maintainer>
  <license>BSD</license>

 <author>changju </author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>

